--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "secp256k1": "secp256k1/js"
   },
   "dependencies": {
-	"byteballcore":"^0.2.51"
+	"byteballcore":"^0.2.51",
+	"mocha":"^3.4.2"
+  },
+  "scripts": {
+      "test": "mocha"
   }
 }
