test travis notification

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,12 @@
 language: node_js
+sudo: enabled
+dist: trusty
+notifications:
+  email:
+    recipients:
+      - dindinw@askcoin.com
+      - dindinw@askcoin.org
+      - wuyiding@gmail.com
+    # on_success: never # default: change
+    on_success: change # default: change
+    on_failure: always # default: always
